# PPD-TPs

./: .gitignore  CMakeLists.txt  README.md
TP-2/exercise-1/: main.cpp
TP-2/exercise-2/: main.cpp
TP-2/exercise-3/: sieteymedio.cpp
TP-3/exercise-3/: main.cpp
TP-3/exercise-4/: main.cpp
TP-3/exercise-5/: a.cpp  b.cpp  main.cpp
TP-3/exercise-6/: main.cpp
